// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextBox component The Rendered HTML should have a label 1`] = `
<div
  class="rfe-form__row"
>
  <label
    for="id-1-1"
  >
    My Label
  </label>
  <textarea
    id="id-1-1"
  />
</div>
`;

exports[`TextBox component The Rendered HTML should support children 1`] = `
<div
  class="rfe-form__row"
>
  <label
    for="id-2-1"
  >
    My Label
  </label>
  <textarea
    id="id-2-1"
  >
    This is my value
  </textarea>
</div>
`;

exports[`TextBox component handling input should set a value when passed in 1`] = `
<div
  class="rfe-form__row"
>
  <label
    for="id-3-1"
  >
    My Label
  </label>
  <textarea
    id="id-3-1"
  >
    My Input Value
  </textarea>
</div>
`;

exports[`TextBox component handling input should update a value when changed 1`] = `
<div
  class="rfe-form__row"
>
  <label
    for="id-5-1"
  >
    My Label
  </label>
  <textarea
    id="id-5-1"
  >
    Updated Value
  </textarea>
</div>
`;
